--- a/CarSite/ClientApp/src/components/navigation/navigation.component.html
+++ b/CarSite/ClientApp/src/components/navigation/navigation.component.html
@@ -1,6 +1,3 @@
 <div class="nav-bar blue">
-  <button class="btn" (click)="onHomeClick()"><i class="fa fa-home fa-2x"></i></button>
-  <button class="btn" (click)="onProfileClick()"><i class="fa fa-address-card fa-2x"></i></button>
-  <button class="btn" (click)="onCarsClick()"><i class="fa fa-car fa-2x"></i></button>
-  <button class="btn" (click)="onImagesClick()"><i class="fa fa-image fa-2x"></i></button>
+  <button class="btn"><i class="fa fa-bars fa-2x"></i></button>
 </div>
