--- a/CarSite/ClientApp/src/styles.css
+++ b/CarSite/ClientApp/src/styles.css
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
 
+
+
 :root {
   --blue: #63b4f4;
   --blue-dark: #1985c1;
@@ -14,12 +16,10 @@ input {
 }
 
 button {
+  border-width: 1px;
   border-style: none;
-  border-radius: 4px;
-  padding: 0.25em;
+  padding: 0.25rem;
 }
-
-
 
 .blue button {
   background-color: var(--blue);
@@ -36,7 +36,7 @@ button {
 }
 
 
-.blue input[type=email]:focus {
+.blue input[type=remail]:focus {
   border-bottom: 1px solid #A0A0DD;
 }
 
@@ -46,5 +46,6 @@ button {
 
 .blue {
   background-color: var(--blue);
-  color: white;
 }
+
+
